; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_hashmap.c_ordered_hashmap_next.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_hashmap.c_ordered_hashmap_next.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ordered_hashmap_entry = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i8* }

@IDX_NIL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ordered_hashmap_next(i32* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.ordered_hashmap_entry*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %43

12:                                               ; preds = %2
  %13 = load i32*, i32** %4, align 8
  %14 = load i8*, i8** %5, align 8
  %15 = call i32 @bucket_hash(i32* %13, i8* %14)
  store i32 %15, i32* %7, align 4
  %16 = load i32*, i32** %4, align 8
  %17 = load i32, i32* %7, align 4
  %18 = load i8*, i8** %5, align 8
  %19 = call i32 @bucket_scan(i32* %16, i32 %17, i8* %18)
  store i32 %19, i32* %8, align 4
  %20 = load i32, i32* %8, align 4
  %21 = load i32, i32* @IDX_NIL, align 4
  %22 = icmp eq i32 %20, %21
  br i1 %22, label %23, label %24

23:                                               ; preds = %12
  store i8* null, i8** %3, align 8
  br label %43

24:                                               ; preds = %12
  %25 = load i32*, i32** %4, align 8
  %26 = load i32, i32* %8, align 4
  %27 = call %struct.ordered_hashmap_entry* @ordered_bucket_at(i32* %25, i32 %26)
  store %struct.ordered_hashmap_entry* %27, %struct.ordered_hashmap_entry** %6, align 8
  %28 = load %struct.ordered_hashmap_entry*, %struct.ordered_hashmap_entry** %6, align 8
  %29 = getelementptr inbounds %struct.ordered_hashmap_entry, %struct.ordered_hashmap_entry* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 8
  %31 = load i32, i32* @IDX_NIL, align 4
  %32 = icmp eq i32 %30, %31
  br i1 %32, label %33, label %34

33:                                               ; preds = %24
  store i8* null, i8** %3, align 8
  br label %43

34:                                               ; preds = %24
  %35 = load i32*, i32** %4, align 8
  %36 = load %struct.ordered_hashmap_entry*, %struct.ordered_hashmap_entry** %6, align 8
  %37 = getelementptr inbounds %struct.ordered_hashmap_entry, %struct.ordered_hashmap_entry* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 8
  %39 = call %struct.ordered_hashmap_entry* @ordered_bucket_at(i32* %35, i32 %38)
  %40 = getelementptr inbounds %struct.ordered_hashmap_entry, %struct.ordered_hashmap_entry* %39, i32 0, i32 1
  %41 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %40, i32 0, i32 0
  %42 = load i8*, i8** %41, align 8
  store i8* %42, i8** %3, align 8
  br label %43

43:                                               ; preds = %34, %33, %23, %11
  %44 = load i8*, i8** %3, align 8
  ret i8* %44
}

declare dso_local i32 @bucket_hash(i32*, i8*) #1

declare dso_local i32 @bucket_scan(i32*, i32, i8*) #1

declare dso_local %struct.ordered_hashmap_entry* @ordered_bucket_at(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
